# Arm-Total-Performance

./: .gitignore  .gitmodules
tutorial_1/: CMakeLists.txt  instructions.md
tutorial_1/src/: matmul_naive.cpp  matmul_neon.cpp  matmul_reordered.cpp  matmul_tiled.cpp  matmul_tiled_1d.cpp  matmul_tiled_2d.cpp  matmul_tiled_neon.cpp
tutorial_1_topdown/: CMakeLists.txt  README.md  instructions.md
tutorial_1_topdown/src/: matmul_naive.cpp  matmul_tiled.cpp
tutorial_2/: CMakeLists.txt  evidence_log.md  instructions.md
tutorial_2/scripts/: gen_memory_layout_gif.py
tutorial_2/src/: aos_baseline.cpp  soa_optimized.cpp  softmax_aligned.cpp  softmax_baseline.cpp  softmax_restrict.cpp  triad_aligned.cpp  triad_baseline.cpp  triad_restrict.cpp
tutorial_3/: CMakeLists.txt  instructions.md
tutorial_3/src/: export_gpt2.py  gpt2.cpp  gpt2_kai_sve.cpp  gpt2_kleidiai.cpp
